2008-03-06 Jesse Kornblum <md5deep@jessekornblum.com>

	* Reworked hashtable code to return a linked list of 
	  file_data_t values, complete with status values.
	  This required me to slightly alter how the program
	  stores the computed hashes. The current version works,
	  but is ugly as all get out. It's a great proof of
	  concept, that's all.


2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Working on hashdeep matching, auditing code

	* Added a file_data_t, known, to the hashdeep state variable
	

2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added spaces to recorded command line in output files.
	

2008-02-22 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved source code from CVS to Subversion repository.
	  This shouldn't create any changes in the code, but
	  should be noted.

	* Version change to 2.1. No need for -001 anymore.
	

2007-12-27 Jesse Kornblum <md5deep@jessekornblum.com>

	* Fixed hashdeep current working directory and filesize display
	  when hashing standard input.

2007-12-11 Jesse Kornblum <md5deep@jessekornblum.com>

	* Got multihashing working. It turns out that the SHA-1
	  update code modifies the buffer that its passed.
	

2007-12-08 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved hash.c into the common code directory, adapting it
	  to work with both md5deep and hashdeep code. Moved display
	  code to a separate file.

	* First working version of hashdeep!
	

2007-12-08 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated hashing headers to only be included once.
	  Included all hashing headers in common.h

	* Modified hashing code to pass hashing context only into
	  hashing code. This requires void pointers, but avoids
	  the hashing code having to deal with the state at all.

	* Moved md5deep man pages into the md5deep directory
	

2007-12-07 Jesse Kornblum <md5deep@jessekornblum.com>

	* Separated md5deep and hashdeep projects into separate 